# geothermpy

./: .coveragerc  .gitignore  CITATION.cff  LICENSE  README.md  README.rst  pyproject.toml  requirements.txt  setup.cfg  setup.py
docs/: Makefile  conf.py  index.rst
geothermpy/: __init__.py  bind.py  geometry.py  gradient.py  integrate.py  interpolate.py  load_data.py  out.py  plot.py  tools.py  unit.py
geothermpy/test/: generate_trace.py  run.py  test_generate_trace.py
geothermpy/test/data/: example.csv  out.csv
src/geothermpy/: __init__.py  bind.py  load_data.py  tools.py
tests/: conftest.py  test_out.py
