[tool.poetry]
name = "geothermpy"
version = "0.1.0"
description = "A Python package that can calculate the isentropic geotherm from thermodynamic properties"
authors = ["Qi Zhang <singularitti@outlook.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.6"
numpy = "^1.16"
pandas = "^0.24.2"
scipy = "^1.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
